--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "aws-sdk": "^2.1409.0",
     "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.1",
     "serverless-event-body-option": "^1.2.0",
     "uuid": "^9.0.0"
   }
